[gd_scene load_steps=16 format=2]

[ext_resource path="res://menus/map_selection/map_selection.gd" type="Script" id=1]
[ext_resource path="res://menus/map_selection/rockgardenlevelnormal.PNG" type="Texture" id=2]
[ext_resource path="res://menus/bg_001.png" type="Texture" id=3]
[ext_resource path="res://menus/map_selection/rockgardenlevelpressed.PNG" type="Texture" id=4]
[ext_resource path="res://menus/map_selection/rockgardenlevelhover.PNG" type="Texture" id=5]
[ext_resource path="res://assets/fonts/BOMBERMA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://menus/map_selection/wizardtowerlevelnormal.PNG" type="Texture" id=7]
[ext_resource path="res://menus/map_selection/wizardtowerlevelhover.PNG" type="Texture" id=8]
[ext_resource path="res://menus/map_selection/wizardtowerlevelpressed.PNG" type="Texture" id=9]
[ext_resource path="res://menus/player_selection/join_button_style.tres" type="StyleBox" id=10]
[ext_resource path="res://menus/player_selection/leave_button_style.tres" type="StyleBox" id=11]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 120, 90.5 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 104.5, 15.5 )

[node name="MapSection" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 324.0, 348.0 ],
"_edit_vertical_guides_": [ 50.0, 589.0, 173.0, 467.0 ]
}

[node name="Bg001" type="Sprite" parent="."]
position = Vector2( 320, 240 )
texture = ExtResource( 3 )

[node name="WizardTowerButton" type="TextureButton" parent="."]
margin_left = 344.0
margin_top = 141.0
margin_right = 587.0
margin_bottom = 324.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="WizardTowerButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WizardTowerButton/Area2D"]
position = Vector2( 120, 89.5 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 390.0
margin_top = 333.0
margin_right = 532.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 1 )
text = "Wizard tower"

[node name="RockGardenButton" type="TextureButton" parent="."]
margin_left = 51.0
margin_top = 141.0
margin_right = 294.0
margin_bottom = 324.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="RockGardenButton"]
position = Vector2( 293, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RockGardenButton/Area2D"]
position = Vector2( -172, 91 )
shape = SubResource( 4 )

[node name="Label2" type="Label" parent="."]
margin_left = 108.0
margin_top = 333.0
margin_right = 237.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 1 )
text = "Rock Garden"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 12.0
margin_top = 15.0
margin_right = 224.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
text = "Back to Selection"

[node name="Area2D" type="Area2D" parent="Button"]
position = Vector2( -12, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2( 116.5, 28.5 )
shape = SubResource( 3 )

[connection signal="button_up" from="WizardTowerButton" to="." method="_on_Map_Selected_button_up" binds= [ "wizard_tower" ]]
[connection signal="mouse_entered" from="WizardTowerButton" to="." method="_on_WizardTowerButton_mouse_entered"]
[connection signal="button_up" from="RockGardenButton" to="." method="_on_Map_Selected_button_up" binds= [ "rock_garden" ]]
[connection signal="mouse_entered" from="RockGardenButton" to="." method="_on_RockGardenButton_mouse_entered"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
